--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,7 +2,7 @@
 
 body {
 	line-height: 1;
-	background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+	background-image: linear-gradient(120deg, #25D2ED 0%, #c2e9fb 100%);
 	font-family: 'Roboto', sans-serif;
 }
 
